latest java error resolved